sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:4: error: ';' expected but integer literal found.
   si ecart>1 alors
            ^AlgCombSort:8: error: ';' expected but ',' found.
     si i et i+ecart doivent être inversés, le faire
                                          ^AlgCombSort:9: error: ';' expected but integer literal found.
     incrémenter i de 1
                      ^AlgCombSort:10: error: ';' expected but symbol literal found.
 tant que l'écart est plus grand que 1 ou que le dernier parcours a inversé au moins un élément
           ^